[gd_scene load_steps=36 format=3 uid="uid://sjoei1q5m1ma"]

[ext_resource type="Script" path="res://engine/render/camera_controller.gd" id="1_av4mg"]
[ext_resource type="Script" path="res://ui/ui_manager.gd" id="1_cnay4"]
[ext_resource type="Theme" uid="uid://dfgva2nypdu6x" path="res://ui/ui_theme.tres" id="1_x425p"]
[ext_resource type="Script" path="res://materials/asset_manager.gd" id="2_iuucp"]
[ext_resource type="Script" path="res://ui/bars/data_bar.gd" id="2_pqncx"]
[ext_resource type="Script" path="res://ui/menus/file_menu.gd" id="2_y3rwe"]
[ext_resource type="PackedScene" uid="uid://ci4s2srdlp13f" path="res://ui/menus/export/export.tscn" id="3_34tcw"]
[ext_resource type="Theme" uid="uid://wrjfe6mxcq45" path="res://ui/parameters/params_theme.tres" id="5_hrfci"]
[ext_resource type="Texture2D" uid="uid://bshqj7vtej43s" path="res://ui/icons/icon_mesh.png" id="6_1sqbh"]
[ext_resource type="PackedScene" uid="uid://dmeof6kgt3rjj" path="res://ui/parameters/section/section.tscn" id="6_87c7t"]
[ext_resource type="Script" path="res://ui/bars/renderer_toolbar.gd" id="6_s0trs"]
[ext_resource type="PackedScene" uid="uid://c01quywq314dv" path="res://ui/parameters/slider/slider.tscn" id="6_tarje"]
[ext_resource type="Texture2D" uid="uid://cx42hbrly0fvi" path="res://ui/icons/icon_pause.png" id="6_wvlpy"]
[ext_resource type="PackedScene" uid="uid://d18ju7bnukh46" path="res://ui/parameters/gradient_colour/gradient.tscn" id="6_yy2h4"]
[ext_resource type="Script" path="res://ui/parameters/section/section.gd" id="7_08hm7"]
[ext_resource type="PackedScene" uid="uid://coiefeptq306s" path="res://ui/parameters/dropdown/dropdown.tscn" id="7_ggaj0"]
[ext_resource type="Script" path="res://ui/parameters/params_manager.gd" id="7_xyjtw"]
[ext_resource type="Texture2D" uid="uid://dsw2dmlnyq433" path="res://ui/icons/icon_play.png" id="8_fa1dh"]
[ext_resource type="PackedScene" uid="uid://ijcpej5evkvf" path="res://ui/parameters/uniform_colour/colour.tscn" id="8_iq2nk"]
[ext_resource type="PackedScene" uid="uid://mapw8rs5g7b8" path="res://ui/parameters/seed/seed_line.tscn" id="9_b1bll"]
[ext_resource type="PackedScene" uid="uid://bsldnikana6eg" path="res://ui/parameters/seed/seeds.tscn" id="9_sniln"]
[ext_resource type="PackedScene" uid="uid://kukxq0246lch" path="res://ui/menus/mesh/mesh_settings_menu.tscn" id="10_d81an"]
[ext_resource type="Texture2D" uid="uid://bvbw2lkgernm7" path="res://materials/brick_wall/brick_wall_thumb.jpg" id="13_2aspn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deoo3"]
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.133196, 0.133196, 0.133196, 1)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_blend = true
corner_detail = 1

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ya5vo"]
size = Vector2(20, 20)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_616qv"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3ltwh"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xj2i0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hut6x"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_av6ya"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xlou5"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_e1l2p"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_apq77"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ioblm"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pce4s"]

[node name="UI" type="Control" node_paths=PackedStringArray("file_menu", "pause_renderer_btn")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cnay4")
file_menu = NodePath("NavigationBar/NavigationMenu/FileMenuButton")
pause_renderer_btn = NodePath("RendererToolbar/HBoxContainer/PauseRendererButton")

[node name="RendererWindow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -630.0
offset_top = -475.0
offset_right = 630.0
offset_bottom = 510.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_av4mg")

[node name="NavigationBar" type="PanelContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme = ExtResource("1_x425p")
theme_override_styles/panel = SubResource("StyleBoxFlat_deoo3")

[node name="NavigationMenu" type="HBoxContainer" parent="NavigationBar"]
layout_mode = 2
theme = ExtResource("1_x425p")

[node name="FileMenuButton" type="MenuButton" parent="NavigationBar/NavigationMenu"]
layout_mode = 2
theme = ExtResource("1_x425p")
text = "File"
flat = false
switch_on_hover = true
item_count = 13
popup/item_0/text = "     New..."
popup/item_0/disabled = true
popup/item_1/text = "     Open..."
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "     Recent"
popup/item_2/id = 2
popup/item_2/disabled = true
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_3/separator = true
popup/item_4/text = "     Save"
popup/item_4/id = 3
popup/item_4/disabled = true
popup/item_5/text = "     Save as..."
popup/item_5/id = 4
popup/item_5/disabled = true
popup/item_6/id = 6
popup/item_6/disabled = true
popup/item_6/separator = true
popup/item_7/text = "     Import material..."
popup/item_7/id = 5
popup/item_7/disabled = true
popup/item_8/text = "     Import mesh..."
popup/item_8/id = 6
popup/item_8/disabled = true
popup/item_9/id = 9
popup/item_9/disabled = true
popup/item_9/separator = true
popup/item_10/text = "     Export..."
popup/item_10/id = 7
popup/item_10/disabled = true
popup/item_11/id = 11
popup/item_11/disabled = true
popup/item_11/separator = true
popup/item_12/text = "     Quit"
popup/item_12/id = 8
script = ExtResource("2_y3rwe")
export_menu_scene = ExtResource("3_34tcw")

[node name="EditMenuButton" type="MenuButton" parent="NavigationBar/NavigationMenu"]
layout_mode = 2
theme = ExtResource("1_x425p")
text = "Edit"
flat = false
switch_on_hover = true
item_count = 13
popup/item_0/text = "New..."
popup/item_1/text = "Open..."
popup/item_1/id = 1
popup/item_2/text = "Recent"
popup/item_2/id = 2
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "Save"
popup/item_4/id = 4
popup/item_5/text = "Save as..."
popup/item_5/id = 5
popup/item_6/id = 6
popup/item_6/separator = true
popup/item_7/text = "Import material..."
popup/item_7/id = 7
popup/item_8/text = "Import mesh..."
popup/item_8/id = 8
popup/item_9/id = 9
popup/item_9/separator = true
popup/item_10/text = "Export..."
popup/item_10/id = 10
popup/item_11/id = 11
popup/item_11/separator = true
popup/item_12/text = "Quit"
popup/item_12/id = 12

[node name="LeftOptions" type="PanelContainer" parent="."]
z_index = -1
layout_direction = 1
layout_mode = 2
offset_right = 30.0
offset_bottom = 1080.0
grow_vertical = 2
theme = ExtResource("1_x425p")

[node name="RendererToolbar" type="PanelContainer" parent="." node_paths=PackedStringArray("pause_btn", "mesh_btn", "mesh_settings")]
top_level = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 330.0
offset_top = 30.0
offset_right = -330.0
offset_bottom = 65.0
grow_horizontal = 2
theme = ExtResource("1_x425p")
script = ExtResource("6_s0trs")
pause_btn = NodePath("HBoxContainer/PauseRendererButton")
pause_icon = ExtResource("6_wvlpy")
play_icon = ExtResource("8_fa1dh")
mesh_btn = NodePath("HBoxContainer/MeshSettingsButton")
mesh_settings = NodePath("HBoxContainer/MeshSettingsButton/MeshSettings")

[node name="HBoxContainer" type="HBoxContainer" parent="RendererToolbar"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
alignment = 2

[node name="PauseRendererButton" type="Button" parent="RendererToolbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
disabled = true
toggle_mode = true
icon = ExtResource("6_wvlpy")
icon_alignment = 1
expand_icon = true

[node name="MeshSettingsButton" type="Button" parent="RendererToolbar/HBoxContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
toggle_mode = true
icon = ExtResource("6_1sqbh")
icon_alignment = 1
expand_icon = true

[node name="MeshSettings" parent="RendererToolbar/HBoxContainer/MeshSettingsButton" instance=ExtResource("10_d81an")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.28571
anchor_right = 1.28571
offset_left = -192.0
offset_right = 0.0
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="RightOptions" type="PanelContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -540.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_x425p")

[node name="DataBar" type="PanelContainer" parent="." node_paths=PackedStringArray("fps_output", "logger_output")]
layout_direction = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_x425p")
script = ExtResource("2_pqncx")
fps_output = NodePath("HBoxContainer/FPSLabel")
logger_output = NodePath("LoggerHBox/LoggerOutput")

[node name="LoggerHBox" type="HBoxContainer" parent="DataBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LoggerLabel" type="Label" parent="DataBar/LoggerHBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Logger: "

[node name="LoggerOutput" type="Label" parent="DataBar/LoggerHBox"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="DataBar"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="FPSLabel" type="Label" parent="DataBar/HBoxContainer"]
layout_mode = 2
text = "FPS"

[node name="VersionLabel" type="Label" parent="DataBar/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Version: 0.1.0"
horizontal_alignment = 2

[node name="AssetsWindow" type="PanelContainer" parent="." node_paths=PackedStringArray("ui_manager", "params_manager", "menu_manager")]
z_index = -2
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 330.0
offset_bottom = 1054.0
theme = ExtResource("1_x425p")
theme_type_variation = &"LPanelContainer"
script = ExtResource("2_iuucp")
ui_manager = NodePath("..")
params_manager = NodePath("../ParamsWindow")
menu_manager = NodePath("../NavigationBar/NavigationMenu")

[node name="AssetsMargin" type="MarginContainer" parent="AssetsWindow"]
layout_mode = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 17
theme_override_constants/margin_bottom = 12

[node name="AssetsVBox" type="VBoxContainer" parent="AssetsWindow/AssetsMargin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AssetsHeading" type="HBoxContainer" parent="AssetsWindow/AssetsMargin/AssetsVBox"]
layout_mode = 2

[node name="AssetsLabel" type="Label" parent="AssetsWindow/AssetsMargin/AssetsVBox/AssetsHeading"]
layout_mode = 2
text = "Assets"

[node name="AssetsSearch" type="LineEdit" parent="AssetsWindow/AssetsMargin/AssetsVBox"]
layout_mode = 2
placeholder_text = "Search"
clear_button_enabled = true
right_icon = SubResource("PlaceholderTexture2D_ya5vo")

[node name="AssetsFilter" type="ItemList" parent="AssetsWindow/AssetsMargin/AssetsVBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_type_variation = &"FilterItemList"
auto_height = true
item_count = 7
max_columns = 8
fixed_icon_size = Vector2i(24, 24)
item_0/icon = SubResource("PlaceholderTexture2D_616qv")
item_1/icon = SubResource("PlaceholderTexture2D_3ltwh")
item_2/icon = SubResource("PlaceholderTexture2D_xj2i0")
item_3/icon = SubResource("PlaceholderTexture2D_hut6x")
item_4/icon = SubResource("PlaceholderTexture2D_av6ya")
item_5/icon = SubResource("PlaceholderTexture2D_xlou5")
item_6/icon = SubResource("PlaceholderTexture2D_e1l2p")

[node name="AssetSelector" type="ItemList" parent="AssetsWindow/AssetsMargin/AssetsVBox"]
custom_minimum_size = Vector2(0, 800)
layout_direction = 1
layout_mode = 2
item_count = 4
max_columns = 4
same_column_width = true
fixed_column_width = 58
icon_mode = 0
fixed_icon_size = Vector2i(54, 54)
item_0/text = "Brick Wall"
item_0/icon = ExtResource("13_2aspn")
item_1/text = "Test Tiles"
item_1/icon = SubResource("PlaceholderTexture2D_apq77")
item_2/text = "Test Metal"
item_2/icon = SubResource("PlaceholderTexture2D_ioblm")
item_3/text = "Test Grass"
item_3/icon = SubResource("PlaceholderTexture2D_pce4s")

[node name="ParamsWindow" type="PanelContainer" parent="." node_paths=PackedStringArray("params_container")]
z_index = -2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -330.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 1051.0
grow_horizontal = 0
theme = ExtResource("1_x425p")
theme_type_variation = &"LPanelContainer"
script = ExtResource("7_xyjtw")
params_container = NodePath("MarginContainer/ScrollContainer/MarginContainer/ParamsContainer")
section_scene = ExtResource("6_87c7t")
slider_scene = ExtResource("6_tarje")
dropdown_scene = ExtResource("7_ggaj0")
gradient_scene = ExtResource("6_yy2h4")
colour_scene = ExtResource("8_iq2nk")
seed_single_scene = ExtResource("9_b1bll")
seed_multiple_scene = ExtResource("9_sniln")

[node name="MarginContainer" type="MarginContainer" parent="ParamsWindow"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 68

[node name="ScrollContainer" type="ScrollContainer" parent="ParamsWindow/MarginContainer"]
layout_mode = 2
theme = ExtResource("5_hrfci")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ParamsWindow/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="ParamsContainer" type="VBoxContainer" parent="ParamsWindow/MarginContainer/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_hrfci")
theme_override_constants/separation = 10
script = ExtResource("7_08hm7")

[connection signal="mouse_entered" from="RendererWindow" to="RendererWindow" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RendererWindow" to="RendererWindow" method="_on_mouse_exited"]
[connection signal="toggled" from="RendererToolbar/HBoxContainer/PauseRendererButton" to="RendererToolbar" method="_on_pause_renderer_button_toggled"]
[connection signal="toggled" from="RendererToolbar/HBoxContainer/MeshSettingsButton" to="RendererToolbar" method="_on_mesh_settings_button_toggled"]
[connection signal="item_activated" from="AssetsWindow/AssetsMargin/AssetsVBox/AssetSelector" to="AssetsWindow" method="_on_asset_selector_item_activated"]
